<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home" />
        <item
            android:id="@+id/admission"
            android:title="@string/admission" />
        <item
            android:id="@+id/announcements"
            android:title="@string/announcements" />
        <item
            android:id="@+id/exam"
            android:title="@string/exam" />
        <item
            android:id="@+id/news"
            android:title="@string/news" />
        <item
            android:id="@+id/events"
            android:title="@string/events" />
        <item
            android:id="@+id/notice"
            android:title="@string/notice" />
    </group>
</menu>